--- a/lss.css
+++ b/lss.css
@@ -3,6 +3,7 @@ html, button, input, select, textarea, .pure-g [class *= "pure-u"], .pure-g-r [c
     font-family: "Hiragino Sans GB W3",Tahoma,Arial,"Microsoft YaHei";
 }
 
+
 /* Buttons */
 .lss-button {
 	border-radius: 8px;
@@ -26,7 +27,7 @@ html, button, input, select, textarea, .pure-g [class *= "pure-u"], .pure-g-r [c
 	background: none repeat scroll 0% 0% #FF9999;
 }
 
-.lss-button-yellow {
+.lss-button-orange {
 	background: none repeat scroll 0% 0% #F1713F;
 }
 
